Fixed page-about.php headshot-container was stretching. Finally realized I had to change the main container-flex on that page to align-items:center

--- a/wp-content/themes/bobbi-rework/css/base/baseline.css
+++ b/wp-content/themes/bobbi-rework/css/base/baseline.css
@@ -31,7 +31,7 @@ html, body {
 /* General Defaults */
 
 h2 {
-    font-size: min(2rem, calc(0.5rem + 1.75vw));
+    font-size: clamp(1.5rem, calc(0.5rem + 1.75vw), 3rem);
     color: var(--title-color);
     background-color: var(--headline-bg);
     border-radius: 8px;
