--- a/wp-content/themes/bobbi-rework/css/base/utility-classes.css
+++ b/wp-content/themes/bobbi-rework/css/base/utility-classes.css
@@ -20,9 +20,17 @@
 }
 
 @media screen and (max-width: 600px) {
+    .container {
+        padding: 0;
+        margin: 0;
+    }
+    
     .container-flex {
         flex-direction: column;
-    }    
+        padding: 0;
+        margin: 0;
+        gap: 10px;
+    }
 }
 
 /* Content Widths */
@@ -38,10 +46,10 @@
 
 @media screen and (max-width: 600px) {
     .content-narrow {
-        max-width: 90%;
+        max-width: 100%;
     }
     .content-wide {
-        max-width: 90%;
+        max-width: 100%;
     } 
 }
 
@@ -62,6 +70,14 @@
     margin: 20px;
 }
 
+@media screen and (max-width: 600px) {
+    .box {
+        margin: 0;
+        padding: 8px;
+    }    
+    
+}
+
 /* "Post" Content */
 /* Containers to display the_title() and the_content() */
 
@@ -70,6 +86,12 @@
     flex: 2;
     flex-basis: 400px;
     align-self: center;
+}
+
+@media screen and (max-width: 600px) {
+    .post-wrapper {
+        flex-basis: auto;
+    }    
 }
 
 h2.title-box {
@@ -102,7 +124,7 @@ h2.title-box {
 
 .post-content {
     /* Text inside the post content box */
-    font-size: clamp(1rem, calc(0.5rem + 1vw), 2rem);
+    font-size: clamp(1.25rem, calc(0.5rem + 1vw), 2rem);
     padding: 10px 10px;
     text-align: left;
 }
@@ -111,6 +133,14 @@ h2.title-box {
     
     .post-wrapper {
         flex-basis: 300px;
+    }
+
+    .post-box {
+        padding: 5px;
+    }
+
+    .post-content {
+        padding: 5px;
     }
 
     .flower-icon img {
