--- a/wp-content/themes/bobbi-rework/css/modules/page-about.css
+++ b/wp-content/themes/bobbi-rework/css/modules/page-about.css
@@ -1,8 +1,15 @@
+.container-flex.about-page {
+    align-items: center;
+}
+
 .headshot-container {
     padding: 10px;
     flex: 1 30%;
     border-radius: 10px;
     background-color: var(--primary-color);
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .headshot-large {
@@ -10,4 +17,5 @@
     height: auto;
     border-radius: 10px;
     padding: 10px;
+    margin: 0 auto;
 }
