--- a/wp-content/themes/bobbi-rework/css/modules/page.css
+++ b/wp-content/themes/bobbi-rework/css/modules/page.css
@@ -48,12 +48,11 @@
 }
 
 .page-links h2 {
-    font-size: min(2rem, calc(0.5rem + 1.25vw));
     padding: 8px;
 }
 
 .min-list li {
-    font-size: min(1.5rem, calc(0.5rem + 1vw));
+    font-size: clamp(1.5rem, calc(0.5rem + 1.75vw), 3rem);
 }
 
 .current_page_item {
